@@ -84,8 +84,11 @@ class Command(Enum):
     SEND_FILE_INFO = "SEND_FILE_INFO"
     DELETE_FILE = "DELETE_FILE"
     DELETE_DIRECTORY = "DELETE_DIRECTORY"
-    DOWNLOAD_FILE = "DOWLOAD_FILE"
     CREATE_DIRECTORY = "CREATE_DIRECTORY"
     SEND_JOB_INFO = "SEND_JOB_INFO"
 
     RESET_PRINTER = "RESET_PRINTER"
+
+    DOWNLOAD = "DOWNLOAD"
+    DOWNLOAD_INFO = "DOWNLOAD_INFO"
+    DOWNLOAD_STOP = "DOWNLOAD_STOP"
